<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        android:padding="16dp"
        tools:context=".AddInfoActivity">

    <EditText
            android:id="@+id/etTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_title"
            android:textSize="16sp"
            android:inputType="textCapSentences"
            android:background="@drawable/edittext_background"
            android:padding="12dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="32dp"
            app:layout_constraintHorizontal_bias="0.0" />

    <ImageView
            android:id="@+id/imageView"
            android:layout_width="129dp"
            android:layout_height="119dp"
            android:layout_marginTop="16dp"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/sunshine"
            android:contentDescription="@string/cd_preview_image"
            app:layout_constraintTop_toBottomOf="@+id/etTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


    <TextView
            android:id="@+id/tvImagePrompt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/add_image_prompt"
            android:gravity="center_horizontal"
            android:textColor="?android:attr/textColorSecondary"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0" />

    <LinearLayout
            android:id="@+id/buttonLayout"
            android:layout_width="354dp"
            android:layout_height="58dp"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/tvImagePrompt"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.48">

        <Button
                android:id="@+id/btnCamera"
                style="@style/Widget.App.Button"
                android:textSize="16sp"
                android:textColor="#000000"
                android:background="@drawable/edittext_background"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_camera"
                android:layout_marginEnd="4dp" />

        <Button
                android:id="@+id/btnGallery"
                style="@style/Widget.App.Button"
                android:textSize="16sp"
                android:textColor="#000000"
                android:background="@drawable/edittext_background"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_gallery"
                android:layout_marginStart="4dp" />
    </LinearLayout>

    <EditText
            android:id="@+id/etContent"
            android:layout_width="369dp"
            android:layout_height="277dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:hint="@string/hint_content"
            android:textSize="16sp"
            android:inputType="textMultiLine|textCapSentences"
            android:gravity="top|start"
            android:background="@drawable/edittext_background"
            android:padding="12dp"
            app:layout_constraintTop_toBottomOf="@+id/buttonLayout"
            app:layout_constraintBottom_toTopOf="@+id/btnSave"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.606" />

    <Button
            android:id="@+id/btnSave"
            style="@style/Widget.App.Button"
            android:layout_width="333dp"
            android:layout_height="52dp"
            android:text="@string/button_save"
            android:padding="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="32dp" />


</androidx.constraintlayout.widget.ConstraintLayout>