<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        android:padding="24dp"
        tools:context=".RegisterActivity">

    <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="92dp"
            android:contentDescription="@string/app_name"
            app:srcCompat="@mipmap/ic_launcher_round"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498" />

    <EditText
            android:id="@+id/etRegisterUsername"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_username"
            android:textColorHint="#ffffff"
            android:inputType="text"
            android:background="@drawable/edittext_background"
            android:padding="12dp"
            app:layout_constraintTop_toBottomOf="@+id/ivLogo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="36dp" />

    <EditText
            android:id="@+id/etRegisterPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/hint_password"
            android:textColorHint="#ffffff"
            android:inputType="textPassword"
            android:background="@drawable/edittext_background"
            android:padding="12dp"
            app:layout_constraintTop_toBottomOf="@+id/etRegisterUsername"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    <EditText
            android:id="@+id/etConfirmPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/hint_confirm_password"
            android:textColorHint="#ffffff"
            android:inputType="textPassword"
            android:background="@drawable/edittext_background"
            android:padding="12dp"
            app:layout_constraintTop_toBottomOf="@+id/etRegisterPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    <Button
            android:id="@+id/btnRegister"
            style="@style/Widget.App.Button"
            android:layout_width="83dp"
            android:layout_height="57dp"
            android:layout_marginTop="52dp"
            android:text="@string/button_register"
            android:textColor="#ffffff"
            android:padding="12dp"
            app:layout_constraintTop_toBottomOf="@+id/etConfirmPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    <TextView
            android:id="@+id/tvBackToLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/link_back_to_login"
            android:textColor="#ffffff"
            android:layout_marginTop="24dp"
            android:padding="8dp"
            app:layout_constraintTop_toBottomOf="@+id/btnRegister"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    <ProgressBar
            android:id="@+id/register_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:visibility="visible" />

    <androidx.constraintlayout.widget.Group
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/group" />

</androidx.constraintlayout.widget.ConstraintLayout>