<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:background="@drawable/background"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:cardBackgroundColor="@android:color/transparent">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="399dp"
            android:layout_height="match_parent"
            android:padding="12dp"
            android:layout_marginTop="32dp">

        <ImageView
                android:id="@+id/iv_image"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:scaleType="centerCrop"
                android:contentDescription="@string/cd_memo_item_image"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:srcCompat="@tools:sample/backgrounds/scenic"
                tools:visibility="visible" />

        <TextView
                android:id="@+id/tv_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="@string/item_default_title"
                android:textSize="18sp"
                android:textStyle="bold"
                android:maxLines="1"
                android:ellipsize="end"
                android:textColor="?android:attr/textColorPrimary"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@+id/iv_image"
                app:layout_constraintEnd_toEndOf="parent" />

        <TextView
                android:id="@+id/tv_content"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginStart="12dp"
                android:text="@string/item_default_content"
                android:textSize="14sp"
                android:maxLines="3"
                android:ellipsize="end"
                android:textColor="?android:attr/textColorSecondary"
                app:layout_constraintTop_toBottomOf="@+id/tv_title"
                app:layout_constraintStart_toEndOf="@+id/iv_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>